# crm_uapa_final

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.test  Makefile  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-dev.yml  link.yml  test.yml
app/: errors.py  main.py  models.py
app/api/: bill_routes.py  product_routes.py  sell_routes.py  user_routes.py
app/config/: database.py
app/repositories/: bill_repository.py  generic_repository.py  product_repository.py  sell_repository.py  user_repository.py
app/services/: authentication_service.py  bill_service.py  crud_methods.py  generic_service.py  password_service.py  product_service.py  sell_service.py  user_service.py
app/tests/: conftest.py  helpers.py  test_authentication_service.py  test_bill_api.py  test_bill_repository.py  test_bill_service.py  test_cache_util.py  test_cognito_util.py  test_deserialize_instance.py  test_errors.py  test_generic_repository.py  test_generic_service.py  test_http_response.py  test_kms_util.py  test_logger.py  test_password_service.py  test_product_api.py  test_product_repository.py  test_product_service.py  test_reset_password_input_validator.py  test_s3_log_handler.py  test_sell_api.py  test_sell_repository.py  test_ssm_util.py  test_user_api.py  test_user_repository.py  test_user_service.py
app/utils/: cache_util.py  cognito_util.py  deserialize_instance.py  http_response.py  kms_util.py  logger.py  reset_password_input_validator.py  ssm_util.py  (+3 more)
terraform/: main.tf  outputs.tf  variables.tf
